<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/tcid"

        app:layout_constraintBottom_toTopOf="@+id/activity_login_id_editText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_login_id_editText"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/hint_id"
        android:hint="@string/hint_id"
        android:inputType="textWebEmailAddress"
        android:singleLine="true"

        app:layout_constraintBottom_toTopOf="@+id/activity_login_pw_editText"
        app:layout_constraintEnd_toEndOf="@+id/activity_login_pw_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_login_pw_editText" />

    <EditText
        android:id="@+id/activity_login_pw_editText"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:autofillHints="@string/hint_pw"
        android:hint="@string/hint_pw"
        android:inputType="textPassword"
        android:singleLine="true"

        app:layout_constraintBottom_toTopOf="@+id/activity_login_signup_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Center -->
    <Button
        android:id="@+id/activity_login_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_SignUp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_login_login_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_login_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_email"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/activity_login_signup_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Button
        android:id="@+id/activity_login_naver_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="12sp"
        android:background="@drawable/button_naver_login"

        android:text="@string/btn_login_naver"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_google_btn" />-->

    <!--
    <Button
        android:id="@+id/activity_login_google_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_google_login"

        android:text="@string/btn_login_google"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_naver_btn" />
    -->

    <com.facebook.login.widget.LoginButton
        android:id="@+id/activity_login_facebook_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:layout_marginTop="50dp"
        android:paddingTop="15dp"

        android:paddingBottom="15dp"

        android:text="@string/btn_login_facebook"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_signup_btn" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/activity_login_google_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:text="@string/btn_login_google"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_facebook_btn">


    </com.google.android.gms.common.SignInButton>

</androidx.constraintlayout.widget.ConstraintLayout>
