<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:weightSum="10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <!-- 대문 이미지 기작 -->
        <ImageView
            android:id="@+id/activity_signup_01_Current"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/SignUp_Current"
            android:scaleType="fitCenter"
            android:src="@drawable/signup_current"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/activity_signup_01_Next01"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/SignUp_Agreement"

            app:layout_constraintLeft_toLeftOf="@+id/activity_signup_01_Current"
            app:layout_constraintRight_toRightOf="@+id/activity_signup_01_Current"
            app:layout_constraintTop_toBottomOf="@+id/activity_signup_01_Current" />

        <ImageView
            android:id="@+id/activity_signup_01_Next01"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/SignUp_Next"
            android:scaleType="fitCenter"

            android:src="@drawable/sigup_next"

            app:layout_constraintBottom_toBottomOf="@+id/activity_signup_01_Current"
            app:layout_constraintLeft_toRightOf="@+id/activity_signup_01_Current"
            app:layout_constraintRight_toLeftOf="@+id/activity_signup_01_Identification"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_Current" />

        <ImageView
            android:id="@+id/activity_signup_01_Identification"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/SignUp_Identification"
            android:scaleType="fitCenter"
            android:src="@drawable/signup_identification"

            app:layout_constraintBottom_toBottomOf="@+id/activity_signup_01_Current"
            app:layout_constraintLeft_toRightOf="@+id/activity_signup_01_Next01"
            app:layout_constraintRight_toLeftOf="@id/activity_signup_01_Next02" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/SignUp_Identification"

            app:layout_constraintLeft_toLeftOf="@+id/activity_signup_01_Identification"
            app:layout_constraintRight_toRightOf="@+id/activity_signup_01_Identification"
            app:layout_constraintTop_toBottomOf="@+id/activity_signup_01_Identification" />

        <ImageView
            android:id="@+id/activity_signup_01_Next02"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/SignUp_Next"
            android:scaleType="fitCenter"

            android:src="@drawable/sigup_next"

            app:layout_constraintBottom_toBottomOf="@+id/activity_signup_01_Current"
            app:layout_constraintLeft_toRightOf="@+id/activity_signup_01_Identification"
            app:layout_constraintRight_toLeftOf="@id/activity_SignUp_01_Information"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_Current" />

        <ImageView
            android:id="@+id/activity_SignUp_01_Information"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/SignUP_Information"
            android:scaleType="fitCenter"
            android:src="@drawable/signup_information"

            app:layout_constraintBottom_toBottomOf="@+id/activity_signup_01_Current"
            app:layout_constraintLeft_toRightOf="@+id/activity_signup_01_Next02"
            app:layout_constraintRight_toLeftOf="@id/activity_signup_01_Next03" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/SignUP_Information"

            app:layout_constraintLeft_toLeftOf="@+id/activity_SignUp_01_Information"
            app:layout_constraintRight_toRightOf="@+id/activity_SignUp_01_Information"
            app:layout_constraintTop_toBottomOf="@+id/activity_SignUp_01_Information" />

        <ImageView
            android:id="@+id/activity_signup_01_Next03"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/SignUp_Next"
            android:scaleType="fitCenter"

            android:src="@drawable/sigup_next"

            app:layout_constraintBottom_toBottomOf="@+id/activity_signup_01_Current"
            app:layout_constraintLeft_toRightOf="@+id/activity_SignUp_01_Information"
            app:layout_constraintRight_toLeftOf="@id/activity_signup_01_Finish"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_Current" />

        <ImageView
            android:id="@+id/activity_signup_01_Finish"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/SignUp_Finish"
            android:scaleType="fitCenter"
            android:src="@drawable/signup_finish"

            app:layout_constraintBottom_toBottomOf="@+id/activity_signup_01_Current"
            app:layout_constraintLeft_toRightOf="@+id/activity_signup_01_Next03"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/SignUp_Finish"

            app:layout_constraintLeft_toLeftOf="@+id/activity_signup_01_Finish"
            app:layout_constraintRight_toRightOf="@+id/activity_signup_01_Finish"
            app:layout_constraintTop_toBottomOf="@+id/activity_signup_01_Finish" />
        <!-- 대문 이미지 끝 -->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_signup_01_guideline01_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_signup_01_guideline01_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <CheckBox
            android:id="@+id/activity_signup_01_checkBox_Agreement_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="@id/activity_signup_01_guideline01_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="@id/activity_signup_01_guideline01_vertical"/>

        <TextView
            android:id="@+id/activity_signup_01_TextView_Agreement_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp_Agreement_total"

            app:layout_constraintBottom_toTopOf="@+id/activity_signup_01_guideline01_horizontal"
            app:layout_constraintLeft_toLeftOf="@id/activity_signup_01_guideline01_vertical"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_signup_01_guideline02_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <CheckBox
            android:id="@+id/activity_signup_01_checkBox_Agreement_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="@id/activity_signup_01_guideline02_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/activity_signup_01_guideline01_horizontal"
            app:layout_constraintRight_toRightOf="@id/activity_signup_01_guideline01_vertical"/>

        <TextView
            android:id="@+id/activity_signup_01_TextView_Agreement_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:text="@string/SignUp_Agreement_term"

            app:layout_constraintBottom_toBottomOf="@+id/activity_signup_01_guideline02_horizontal"
            app:layout_constraintLeft_toLeftOf="@id/activity_signup_01_guideline01_vertical"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_guideline01_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_signup_01_guideline03_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <!-- 이용약관 -->
        <TextView
            android:id="@+id/activity_signup_01_TextView_Agreement_term_content"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            android:text="@string/SignUp_Agreement_term_Contents"
            android:scrollbars="vertical"

            android:padding="5dp"

            app:layout_constraintBottom_toBottomOf="@id/activity_signup_01_guideline02_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_guideline03_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_signup_01_guideline04_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <CheckBox
            android:id="@+id/activity_signup_01_checkBox_Agreement_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="@id/activity_signup_01_guideline04_horizontal"
            app:layout_constraintLeft_toLeftOf="@id/activity_signup_01_checkBox_Agreement_total"
            app:layout_constraintTop_toTopOf="@+id/activity_signup_01_guideline03_horizontal"
            app:layout_constraintRight_toRightOf="@id/activity_signup_01_guideline01_vertical"/>

        <TextView
            android:id="@+id/activity_signup_01_TextView_Agreement_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:text="@string/SignUp_Agreement_privacy"

            app:layout_constraintBottom_toBottomOf="@+id/activity_signup_01_guideline04_horizontal"
            app:layout_constraintLeft_toLeftOf="@id/activity_signup_01_guideline01_vertical"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_guideline03_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_signup_01_guideline05_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <!-- 개인정보 수집 및 이용 -->
        <TextView
            android:id="@+id/activity_signup_01_TextView_Agreement_privacy_content"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            android:text="@string/SignUp_Agreement_privacy_Contents"
            android:scrollbars="vertical"

            android:padding="5dp"

            app:layout_constraintLeft_toLeftOf="@id/activity_signup_01_checkBox_Agreement_total"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_guideline04_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/activity_signup_01_guideline05_horizontal"/>

        <Button
            android:id="@+id/activity_signup_01_cancel_btn"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.15"
            android:text="@string/SignUp_Cancel"

            app:layout_constraintHorizontal_chainStyle="spread"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_guideline05_horizontal"
            app:layout_constraintLeft_toLeftOf="@id/activity_signup_01_checkBox_Agreement_total"
            app:layout_constraintRight_toLeftOf="@+id/activity_signup_01_next_btn"
            />

        <Button
            android:id="@+id/activity_signup_01_next_btn"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.15"
            android:text="@string/SignUp_Next"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/activity_signup_01_guideline05_horizontal"
            app:layout_constraintLeft_toRightOf="@id/activity_signup_01_cancel_btn"
            app:layout_constraintRight_toRightOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
